--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.3</version>
             <configuration>
+               <encoding>ISO-8859-1</encoding>
                <source>1.8</source>
                <target>1.8</target>
             </configuration>
